updated at: 2023-04-25 23:13, 対面式アーケード筐体「STRATO VILLAGE」 - ウォーパルド航空開発研究所 - BOOTH

--- a/VRChat/40/1252740.html
+++ b/VRChat/40/1252740.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CsZOmUC7mDSXhS3ndwlsBzU1uAv3cVFMSb7yavOUD30="></script>
+    "WhXhQ+n7zvq4WXM/yyz75frrG3BuT7vAz0QsppZnx9w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"対面式アーケード筐体「STRATO VILLAGE」","description":"一から設計した完全オリジナルの対面式アーケードゲーム筐体。\nVR空間でも自由に対戦を楽しもう！\nコントロールパネルの数は11種類！！\n\n\n～同梱物～\n\n・対面筐体.fbx\n\n・モニター画面.png（モニター用のテクスチャ。映したいものを黒い枠内に入れてください。テーブル筐体のUVと同一です。\n\n・対面筐体パネル.png（パネル部のテクスチャ。インストラクションボードなどを置くことでそれっぽく見えます。\n\n・対面筐体パネル麻雀.png（「コンパネ麻雀」利用時に使うパネル部のテクスチャ。インストラクションボードなどを置くことでそれっぽく見えます。\n\n・りーどみー.txt\n\n・STRATO_VILLAGE.unitypackage（Unityパッケージ。Prefabフォルダに「Normal」「tate」「mahjong」が入っています。\n～使用方法～\n\nfbxファイルやUnityパッケージをUnityやBlenderなど各種ソフトにインポートしてご利用下さい。\n\n\n～利用規約～\nデータのみの再配布を禁じます\n(自作モデルに組み込む等は可)\n\n改変、動画、同人、商用、配信等自由です。","url":"https://booth.pm/ja/items/1252740","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1252740/95793a19-ee5b-4b7c-9c0c-9981e654f615_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CsZOmUC7mDSXhS3ndwlsBzU1uAv3cVFMSb7yavOUD30="></script>
+    nonce="WhXhQ+n7zvq4WXM/yyz75frrG3BuT7vAz0QsppZnx9w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1252740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1252740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               70
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
