--- a/VRChat/99/1252499.html
+++ b/VRChat/99/1252499.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bBS64iNs9fr9s3ggc8oa8oz24CEM/CiDyfE8Y8fNjoQ="></script>
+    "0KTu0Jtf0vbtWIUS0LIf69Y+IOkh18eWJE34ZqBMs3w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルメカ少女3Dモデル『Lita』-リタ-　","description":"VRChat対応 3Dモデル『Lita』-リタ-　\n※同梱されているUTSのバージョンは2.0.7.5です。古いバージョンのUTSが含まれるUnityプロジェクトにインポートするとシェーダーが破損する恐れがあります。\n※※※※※※※※※※※※※※※※※※※※※※※※※※※※\n2020/10/14現在、VRChat_Avatar3.0向け設定を更新する予定は\nありません。購入の際はご留意ください。\nオキュラスQuest非対応モデルです。\n※※※※※※※※※※※※※※※※※※※※※※※※※※※※","url":"https://booth.pm/ja/items/1252499","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/c01bca2e-25b7-4b7b-ab98-9d8afded3caf/i/1252499/3197ae91-5d32-42ed-8e33-d3ac63d56762_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bBS64iNs9fr9s3ggc8oa8oz24CEM/CiDyfE8Y8fNjoQ="></script>
+    nonce="0KTu0Jtf0vbtWIUS0LIf69Y+IOkh18eWJE34ZqBMs3w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,10 +178,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1252499/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              834
+                              836
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1252499/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              834
+                              836
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
