--- a/VRChat/86/1252486.html
+++ b/VRChat/86/1252486.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dk4CvSsIFV3WA6KRxnVrEwJGD4PcYs0EVFAQ2R+dquM="></script>
+    "CJIEqwP7vzofB0zOQNquT8Q1YFiSSpR8Qg9c7p3Tirk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"修道服セット【VRoid用衣装】","description":"このデータはVRoid Studio用（ワンピース部分はセシル変身アプリでも利用可能）\nVRoidβ版とVRoid正式版どちらでも着れます。\n修道服デザインのVRoid用ワンピース3色と着脱できるロザリオ、ウィンプルの作り方の一例セットです。\n","url":"https://booth.pm/ja/items/1252486","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1252486/7a7123b2-a1c8-4948-bca7-16a0dc13c92c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dk4CvSsIFV3WA6KRxnVrEwJGD4PcYs0EVFAQ2R+dquM="></script>
+    nonce="CJIEqwP7vzofB0zOQNquT8Q1YFiSSpR8Qg9c7p3Tirk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1252486/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              270
+                              271
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1252486/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              270
+                              271
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
