--- a/VRChat/99/1239599.html
+++ b/VRChat/99/1239599.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Sk0BYGEQ+3sq/HphOlnJUOtpzNvV2HB2b1MfJFMoITM="></script>
+    "/praA1aJ0szY/TBfIvzCvrp6+XY7ynH7z9GonayXy0s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF 対人外用自動拳銃 Melty Blood シヴィリアンモデル","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n対人外用に開発された拳銃の民間モデル。\n扱いやすいとはお世辞にも言えないが、その威力と命中精度は相手が何であれダメージを与える事が出来る。\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\n2DViewテクスチャ付属\nカラーバリエーション4色\nボーン（ガンプレイ・ハンマー）・シェイプキー（スライド後退）あり\n\n合計ポリ数:19610\nフレーム:14222\nコンペンセイター:2184\nマガジン:2004\n弾丸:1200\n\n\n\n\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1239599","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1239599/d58393d2-9185-4971-8a2a-bc23092d8634_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Sk0BYGEQ+3sq/HphOlnJUOtpzNvV2HB2b1MfJFMoITM="></script>
+    nonce="/praA1aJ0szY/TBfIvzCvrp6+XY7ynH7z9GonayXy0s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239599/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               155
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239599/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               155
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
