--- a/VRChat/41/1251341.html
+++ b/VRChat/41/1251341.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Z5RXV13ueNhcMiWBq4fRDt8ckk8qy/azk/WdY2JoRn8="></script>
+    "eOi3TsjAfXKYNw75Zd3c7mP9UjJvwGAgFTLr0kWhdNI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]電球テラリウム","description":"[3Dモデル]電球テラリウム　紹介文\n\nVRCHAT向けの3Dモデルです。\nちょっとしたインテリアとしてワールドに置いたりしてあげてください。\n\n仕様\nポリゴン数 ▲3297\nマテリアル数：2\nark-toonShader使用\n\n\nファイル内容\n・UnityPackageファイル\n・FBXファイル\n・テクスチャ各種\n・Readme.txt\n\n\n※再配布以外はご自由にお使いください。\n\n\n\n・免責事項\n本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。","url":"https://booth.pm/ja/items/1251341","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/0434d815-a11c-4fea-8baf-c557e859424b/i/1251341/061b5b93-e871-4518-b29d-b78df79d5175_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z5RXV13ueNhcMiWBq4fRDt8ckk8qy/azk/WdY2JoRn8="></script>
+    nonce="eOi3TsjAfXKYNw75Zd3c7mP9UjJvwGAgFTLr0kWhdNI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1251341/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               713
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1251341/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               713
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
