--- a/VRChat/74/1251174.html
+++ b/VRChat/74/1251174.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "p0KwxhWcXMwIJ5PHVbMefdtKtKmF9bo4X9nVS034NOM="></script>
+    "c99TqBAH6+6sQdOjwAbCx0u9CrCYxJTGmDTQ01uBu/U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ニキシー管","description":"Unity2017.4.15f1で動作するニキシー管です。(VRChat利用可)\n元は個人的利用を想定してますので、軽量化・細部作り込み・説明書作成等は一切しておりませんのでご了承下さい。\n(気が向いたらちょこちょこ更新するかもしれません。)\n\n配布形式：zip圧縮済みのUnitypackage\n内容物　：各種マテリアル(12種)・fbxモデルデータ(△14,118)\n・数字順送りアニメーション・(前記アニメーション適用済)prefab\n\n※スタンダードシェーダーのEmissionを使って文字を発光させてますので、ポストプロセスなしの状態ではページ動画等の様なブルームはかかりません。\n\n※以下利用規約※\n商用利用可。\n過度な宗教・政治的な事への利用、再配布(ペデスタル機能含む)はNGです。\n上記含め、一般常識を踏まえた利用をお願い致します。\n又、当コンテンツを利用したことにより発生した如何なるトラブル・損害等に対して、製作者は一切の責任を負いません。\n\n※データに関する不備・質問がございましたらツイッターにてご連絡をお願い致します。(https://twitter.com/vrVicePrincipal)","url":"https://booth.pm/ja/items/1251174","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/32283ad0-3069-4adc-a557-8d34b693e088/i/1251174/3ef46b76-4ef1-4e0a-b0be-42796706abe4_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p0KwxhWcXMwIJ5PHVbMefdtKtKmF9bo4X9nVS034NOM="></script>
+    nonce="c99TqBAH6+6sQdOjwAbCx0u9CrCYxJTGmDTQ01uBu/U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1251174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1251174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
