updated at: 2023-04-25 23:15, ローポリエスカレーター low poly escalator - IW Store - BOOTH

--- a/VRChat/70/1249770.html
+++ b/VRChat/70/1249770.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LRqaX3ChgCD1feYZbfseIblBlpo++OAPC6uH2e6SZBs="></script>
+    "bfwgaVFRITj7fUujnMGOLR8gw63ZdLfGLfdqggSdMEM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリエスカレーター low poly escalator","description":"*2023年1月3日更新\n\nUnity、VRChatのワールドに使えるローポリエスカレーターです。高さは固定になります。\n上りと下りの二つのPrefabが入っています。\n\n内容物:\n-FBXファイル\n-unityパッケージファイル\n-テクスチャー\n\n-----------------------\nUpdated 03 JAN 2023\n\nLow poly escalator for Unity, can use for VRChat. Size are fixed.\n2 prefabs for up and down animations.\n\nIncludes:\n-FBX file\n-Unity Package file\n-Textures","url":"https://booth.pm/ja/items/1249770","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/3102054f-dac7-48b0-b708-c4012197d613/i/1249770/cc6d0a46-bb9e-450d-be78-2e710a6624b9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LRqaX3ChgCD1feYZbfseIblBlpo++OAPC6uH2e6SZBs="></script>
+    nonce="bfwgaVFRITj7fUujnMGOLR8gw63ZdLfGLfdqggSdMEM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1249770/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1249770/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
