updated at: 2023-04-25 23:16, スライドショーシェーダ - waseのしょっぷ - BOOTH

--- a/VRChat/96/1246196.html
+++ b/VRChat/96/1246196.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dN2w55x1BmC3v/UW5TBh6mNfu5N8GxDo2KMm9VEHGO0="></script>
+    "PfmhcQuJlhsdUI27Xr4GiXcxtGqjkZsOFxCM/EUzP1g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スライドショーシェーダ","description":"----","url":"https://booth.pm/ja/items/1246196","offers":{"priceCurrency":"JPY","@type":"Offer","price":"398"},"image":"https://booth.pximg.net/c/620x620/44a672fa-2dc2-4da3-974f-859c294539fc/i/1246196/5e1648fd-ae81-4c32-b480-5bca44e27a51_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dN2w55x1BmC3v/UW5TBh6mNfu5N8GxDo2KMm9VEHGO0="></script>
+    nonce="PfmhcQuJlhsdUI27Xr4GiXcxtGqjkZsOFxCM/EUzP1g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1246196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               133
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1246196/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               133
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
