updated at: 2023-04-25 23:18, はこっぽいど / Boxelmodel★[MMD/VRchat/VRM]【無料】 - 3Dモデル配布所[はこっぽいど／エルシー・イステアリちゃん] - BOOTH

--- a/VRChat/67/1240867.html
+++ b/VRChat/67/1240867.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hDagzp1natTliP8e5V62N2sNp8fquk6mtokt9Z7+Lqs="></script>
+    "bX6ZbfqOnet3vru3Vx4EJIvl7q9IurL8QGcSmldskpc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"はこっぽいど / Boxelmodel★[MMD/VRchat/VRM]【無料】","description":"■テクスチャ１枚でオリジナル３Ｄを作れる『はこっぽいど(Boxelmodel)』！\n　配布モデル 一覧(VRMmodels)⇛ https://hub.vroid.com/users/1389867\n","url":"https://booth.pm/ja/items/1240867","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/a0e3cbaf-6205-48d3-bf0c-4afe8225c308/i/1240867/bc498876-0dba-4530-aa01-13bf75d390d0_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hDagzp1natTliP8e5V62N2sNp8fquk6mtokt9Z7+Lqs="></script>
+    nonce="bX6ZbfqOnet3vru3Vx4EJIvl7q9IurL8QGcSmldskpc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,10 +187,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1240867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              784
+                              785
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1240867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              784
+                              785
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
