updated at: 2023-04-25 23:19, 石化シェーダー - minerally-BOOTH - BOOTH

--- a/VRChat/61/1243661.html
+++ b/VRChat/61/1243661.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FfPmYoq9iJSXmKF3fe2rXgx1uCYNO08CjBOFCix7oTs="></script>
+    "XNvcu08ElvZ6dlbLQbX7UVOP2MsNtxMXnA88ptPO5u0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"石化シェーダー","description":"モデルを徐々に石化させるのを実現する為のシェーダです。\n\n使用方法については付属の README.md を参照してください。\n\n","url":"https://booth.pm/ja/items/1243661","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c0339ae3-3861-4635-8267-2ee54de3de85/i/1243661/5f8cbf86-2cbd-4e68-ab1e-3f3b2b95f240_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FfPmYoq9iJSXmKF3fe2rXgx1uCYNO08CjBOFCix7oTs="></script>
+    nonce="XNvcu08ElvZ6dlbLQbX7UVOP2MsNtxMXnA88ptPO5u0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1243661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              199
+                              200
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1243661/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              199
+                              200
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
