updated at: 2023-04-25 23:19, Empty memories - 仮面屋 sound - BOOTH

--- a/VRChat/26/1242626.html
+++ b/VRChat/26/1242626.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VWhPl04S9besw6JNQoUKWhFrNkBl6J4WEUhjByk7AdM="></script>
+    "CCMLRCy1UabZ3sVJZGcoyNALB03F8DNVLQB+gvvNAUw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Empty memories","description":"ピアノメインの短めの曲です\n何かのBGMとしてお使い下さい\n商用・非商用利用いずれも可。\n\nTwitterフォローしてくれると喜びます。\n\n■禁止事項\nファイルの二次配布、無断販売","url":"https://booth.pm/ja/items/1242626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2b8e31f1-377f-4eca-93d8-4486c2dbedfd/i/1242626/3b1e01cf-3870-461c-919b-890db23ccad2_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VWhPl04S9besw6JNQoUKWhFrNkBl6J4WEUhjByk7AdM="></script>
+    nonce="CCMLRCy1UabZ3sVJZGcoyNALB03F8DNVLQB+gvvNAUw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1242626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1242626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
