updated at: 2023-04-25 23:20, Unity,VRC等用ビームエフェクトvol.0 - ビームマンの何か屋さん - BOOTH

--- a/VRChat/18/1241518.html
+++ b/VRChat/18/1241518.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jOaxVpcKqI1WsTkhOf8mBx1N2M1pwOfQ374r8a2EpCg="></script>
+    "nKxpqTujusihbES4PVkrh6WF51wJCeda3K8z5Fksboo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Unity,VRC等用ビームエフェクトvol.0","description":"ビーム！ビームです！\n\nVRChatでの使用を想定した、ノンスクリプトのビームエフェクトです。HDR対応な環境（PostProcessingStack等）を使ったグロー表現にも対応しています。\n\nフリー配布みたいなものなので、アバターやワールドへの埋め込み、再配布その他もろもろ好きに使ってください！","url":"https://booth.pm/ja/items/1241518","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/02062d36-6794-4358-8fe0-7b6ab8b50e62/i/1241518/ce3aebb3-7280-493a-9f53-1b6b3b672024_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jOaxVpcKqI1WsTkhOf8mBx1N2M1pwOfQ374r8a2EpCg="></script>
+    nonce="nKxpqTujusihbES4PVkrh6WF51wJCeda3K8z5Fksboo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1241518/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               763
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1241518/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               763
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
