updated at: 2023-04-25 23:20, 【焼きごて】 【スタンプ】 【タトゥー】 【デコレーション】 マジカル☆やきごて お試し版(本体+お試し模様3種類) 【自作Shader付き】【ハート】【リツイート風マーク】【いんもん】【導入見本humanoid同梱】【SPS-I】 - store84 - BOOTH

--- a/VRChat/69/1239469.html
+++ b/VRChat/69/1239469.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fb+RroHkDEVZ6tTxSOuhOlx743y9tsCXAXzhAF9ejGc="></script>
+    "Yld9gwfOJODExd6Jj5sPR0rC+yZbnQQqz3oJRk5+56k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【焼きごて】 【スタンプ】 【タトゥー】 【デコレーション】 マジカル☆やきごて お試し版(本体+お試し模様3種類) 【自作Shader付き】【ハート】【リツイート風マーク】【いんもん】【導入見本humanoid同梱】【SPS-I】","description":"動画とテキストを見て、そのうえで購入するか判断してください。\n\nVRChat向けです。\n\nVRChat内で表示名 84 でプレイしていますので、会いに来てくれれば話をすることもできます。(ただし日本語しかしゃべれないです）","url":"https://booth.pm/ja/items/1239469","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/b6ebab44-a258-4c23-a4a1-22dfb36b67c5/i/1239469/6c117693-2b2d-44e4-ac8f-dee1daebf2d9_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fb+RroHkDEVZ6tTxSOuhOlx743y9tsCXAXzhAF9ejGc="></script>
+    nonce="Yld9gwfOJODExd6Jj5sPR0rC+yZbnQQqz3oJRk5+56k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1239469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              85
+                              84
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1239469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              85
+                              84
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
