updated at: 2023-04-25 23:22, ロボテフ3Ｄモデル - 月面基地ホシカワ - BOOTH

--- a/VRChat/99/1170199.html
+++ b/VRChat/99/1170199.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FuiABjRhlBE2WcM/Tyypf2KPjlG/6fRz1zbPKmdOYEA="></script>
+    "MDZL01+JyDCH9AcS4jwFcxeVazp48PPm8rMA1HMKzjg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロボテフ3Ｄモデル","description":"星河テフロボットverの3Ｄモデルです。\nバーチャルなお部屋のインテリアとしてどうぞお使いください。\nＶＲchatなどでの使用：可\n　　　　　　　　　　　※ヒューマノイドでは動きません\n改変：可（原型がわからなくなるレベルは不可）\n自作発言：不可\n\nzipファイル内→fbxデータ、テクスチャ用pngデータ\n\n製作者：アイザックさん（@vtuber_issac）","url":"https://booth.pm/ja/items/1170199","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/92c09f92-e1ed-4c2c-81e0-33fbf93f2603/i/1170199/ddbf2718-effc-4f55-b23b-7620ebb6eb3a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FuiABjRhlBE2WcM/Tyypf2KPjlG/6fRz1zbPKmdOYEA="></script>
+    nonce="MDZL01+JyDCH9AcS4jwFcxeVazp48PPm8rMA1HMKzjg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1170199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1170199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
